--- a/ng/Movie-Frontend/src/app/movie-portal/Home/home/home.component.html
+++ b/ng/Movie-Frontend/src/app/movie-portal/Home/home/home.component.html
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Create Actor</a>
           </li>
+          <li class="nav-item">
+            <button class="btn btn-primary" (click)="onLogOut()">Logout</button>
+          </li>
       </ul>
     </div>
   </div>
